Criação do endpoint todos usuarios
